--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>App</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
     <div id="content"></div>
-    <script src="http://localhost:8088/js/vendor.js" charset="utf-8"></script>
-    <script src="http://localhost:8088/js/app.min.js" charset="utf-8"></script>
+    <script src="http://localhost:8088/app.min.js" charset="utf-8"></script>
     <script>
       var config = {};
       window.App.default.renderApp(config);
